# Lorian-s-DiscordBot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bot_emojis.toml  bot_images.toml  config.example.toml  new.md
.github/workflows/: release.yml
data/: owner_info.toml
docs/tasks/self-update-0714/: DECISIONS.md  WALKTHROUGH.md
lang/: en.toml
src/: config.rs  main.rs
src/ai/: emotions.rs  gemini.rs  mod.rs  responses.rs
src/commands/: commission.rs  feedback.rs  github.rs  help.rs  mod.rs  ticket.rs  update.rs
src/data/: conversation_data.rs  message_data.rs  mod.rs  persistence.rs
src/events/: mod.rs  safety.rs
src/lang/: mod.rs
src/updater/: download.rs  github.rs  mod.rs  replace.rs  state.rs
src/utils/: mod.rs
